# rbe550-team-project

./: README.md  bicycleKinematicsModelOneIteration.m  bicycleKinematicsOneIteration.m  calcDutyCyclePeriod.m  dutyCycle.m  fromLieSO3.m  generatePath.m  main.m  nonholonomicBicycleTestScript.m  recreatePathUsingParameters.m  toLieSE3.m
CURV/: CURVLookup.csv  useLookup.m
Find_parameters/: findAngle.m  findCurvature.m  findParameters.m
Pathfinding/: checkIfPossible.m  circularPath.m  nextPath.m
Paths/: 4_smooth.xyz  obstacle_locations.txt
Retrace_pose/: plotFromPose3d.m  retraceNeedlePoseLine.m
Transform_axis/: needleToRobot.m  robotToNeedle.m  rotM.m
bicycle_model/: NeedleModelBicycle.m  expSE3.m  expSO3.m  main.m  nonholonomicBicycleTestScript.m  toLieSO3.m
project/: README.md
project/include/: Common.hpp  Environment.hpp  IPlanner.hpp  Planner_RRT.hpp  ROSLogistics.hpp  Utils.hpp
project/scripts/: main.py  map.csv  test_map.csv
project/src/: Environment.cpp  Planner_RRT.cpp  ROSLogistics.cpp  Utils.cpp  collision_check_lineEq.cpp  main.cpp
results/: rbe550_project.mdj
results/rrt/: 1_raw.xyz  1_smooth.xyz  2_raw.xyz  2_smooth.xyz  3_raw.xyz  3_smooth.xyz  4_raw.xyz  4_smooth.xyz
results/rrt_star/: 1_raw.xyz  1_smooth.xyz  2_raw.xyz  2_smooth.xyz  3_raw.xyz  3_smooth.xyz  4_raw.xyz  4_smooth.xyz
src/project/: CMakeLists.txt  package.xml
src/project/include/: Environment.hpp  Node.hpp  Planner_RRT_Star.hpp
src/project/scripts/: search.py
src/project/src/: ROSLogistics.cpp  main.cpp
visualize/: add_obstacle.m  add_phantom.m  draw_cube.m  obstacle.m  parser.m  results_RRT.m  results_RRT_star.m
